# fitai

./: .gitignore  package-lock.json  setup.bat  setup.sh  start.bat  start.sh  tailwind.config.js  temp_dashboard.tsx
backend/: pyproject.toml  requirements.txt  seed_db.py  seed_users.py
backend/fitai/: asgi.py  settings.py  urls.py  wsgi.py
backend/myapp/: admin.py  expanded_preset_foods.py  ml_recommender.py  models.py  serializers.py  serializers_body.py  signals.py  urls.py  views.py  views_admin.py  views_body.py  views_chat.py
backend/myapp/management/commands/: add_preset_foods.py  seed_badges.py
backend/myapp/migrations/: 0001_initial.py  0002_alter_userprofile_phone.py  0003_goal_usersettings_bodymeasurement.py  0004_customfood_dailystreak_mealentry_workoutentry.py  0005_alter_mealentry_date_alter_workoutentry_date.py  0006_presetfood.py  0007_presetfood_ingredients_userallergy.py  0008_dailysummary.py  0009_userprofile_medical_conditions.py  0010_presetworkout_presetfood_is_diabetic_friendly_and_more.py  0011_presetworkout_body_part_and_more.py  0012_workoutentry_body_part.py  0013_customworkout.py  0014_workoutentry_reps.py  0015_workoutentry_sets.py  0016_badge_gamificationprofile_userbadge.py  0017_presetfood_avoid_for_presetfood_suitable_for_and_more.py  0018_userprofile_is_banned.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/app/: App.tsx  ErrorPage.tsx  routes.ts  routes.tsx
src/: App.jsx  index.css
src/components/: Navbar.jsx
src/pages/: SignIn.jsx  SignUp.jsx
(+41 files in other folders)
