[project]
name = "fitai-backend"
version = "0.1.0"
description = "FitAI Backend Django Application"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.3",
    "djangorestframework-simplejwt>=5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
